--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello Members
+<!DOCTYPE html>
+<html lang='se'>
+<head>
+<title>JSTM Technologies</title>
+<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
+</head>
+
+<body>
+
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="index.html">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="assets/pages/products.html">Products</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="assets/pages/about.html">About</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="assets/pages/contact.html">Contact</a>
+  </li>
+</ul>
+</body>
+</html>
