--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
   <li class="nav-item">
     <a class="nav-link active" href="index.html">Home</a>
   </li>
+  <li class="nav-item">
   <p>|</p>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="assets/pages/products.html">Products</a>
   </li>
+  <li class="nav-item">
   <p>|</p>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="assets/pages/about.html">About</a>
   </li>
+  <li class="nav-item">
   <p>|</p>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="assets/pages/contact.html">Contact</a>
   </li>
