--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<header>
 <ul class="nav justify-content-center">
   <li class="nav-item">
     <a class="nav-link active" href="index.html">Home</a>
@@ -32,5 +33,7 @@
     <a class="nav-link" href="assets/pages/contact.html">Contact</a>
   </li>
 </ul>
+</header>
+
 </body>
 </html>
