--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@
 </header>
 
 </body>
-<img src="assets/resource/monkey.jpg" class="img-fluid" alt="Responsive image">
+<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">
 </html>
