--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p>|</p>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="assets/pages/about.html">About</a>
+    <a  href="assets/pages/about.html">About</a>
   </li>
   <li class="nav-item">
   <p>|</p>
