--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -2,12 +2,21 @@
 <html lang='se'>
 <head>
 <title>About</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
 </head>
 
 <body>
-<nav><a href="index.html">Tillbaka</a></nav>
-<hr>
-<h4> About JSTM Technologies</h4>
+
+<header>
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="index.html">Home</a>
+  </li>
+</ul>
+</header>
+
 </body>
+<p> About </p>
 </html>
