--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -13,7 +13,7 @@
 <header>
 <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="https://jstmsolution.github.io">Home</a>
+    <a class="nav-link active" href="https://jstmsolution.github.io/index.html">Home</a>
   </li>
 </ul>
 </header>
