--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang='se'>
 <head>
-<title>About</title>
-<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
+<title>Contact</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<link href="/ssets/style/style.css" rel="stylesheet"  type="text/css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-<nav><a href="index.html">Tillbaka</a></nav>
-<hr>
-<h4> Contact</h4>
+
+<header>
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="https://jstmsolution.github.io/index.html">Home</a>
+  </li>
+</ul>
+</header>
+<p> Contact </p>
 </body>
 </html>
