--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang='se'>
 <head>
-<title>About</title>
-<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
+<title>Products</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<link href='/assets/style/style.css' rel='stylesheet'  type='text/css'>
 </head>
 
 <body>
-<nav><a href="index.html">Tillbaka</a></nav>
-<hr>
-<h4> Products</h4>
+
+<header>
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="https://jstmsolution.github.io/index.html">Home</a>
+  </li>
+</ul>
+</header>
+
+<p> Products </p>
 </body>
 </html>
