--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
 </header>
 
 </body>
-<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">
+<!--<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">-->
 </html>
