--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   </li>
 </ul>
 </header>
-
-</body>
 <!--<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">-->
+<img src="/assets/resource/default.jpg" class="img-fluid" alt="Responsive image">
+</body>
+
 </html>
