--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </ul>
 </header>
 <!--<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">-->
-<img src="/assets/resource/default.jpg" class="img-fluid" alt="Responsive image">
+<img src="assets/resource/default.jpg" class="img-fluid" alt="Responsive image">
 </body>
 
 </html>
