--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -19,6 +19,11 @@
 </ul>
 </header>
 
-<p> About </p>
+<div class="card">
+  <img class="card-img" src="/assets/resource/default.jpg" alt="Card image">
+  <div class="card-img-overlay">
+    <p class="card-text">I'm text that has a background image!</p>
+  </div>
+</div>
 </body>
 </html>
