--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <li class="nav-item">
     <a class="nav-link" href="assets/pages/products.html">Products</a>
   </li>
-  <li id="item">
-  <p>|</p>
+  <li id="item"> 
+  <span class="align-text-bottom">|</span>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="assets/pages/about.html">About</a>
@@ -38,6 +38,7 @@
 </header>
 <!--<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">-->
 <img src="assets/resource/default.jpg" class="img-fluid" alt="Responsive image">
+<p class="text-center">Center aligned text on all viewport sizes.</p>
 </body>
 
 </html>
