--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -22,8 +22,8 @@
 <div class="card">
   <img class="card-img" src="/assets/resource/default.jpg" alt="Card image">
   <div class="card-img-overlay">
-  <h2 class="card-title">About</h2>
-    <p class="card-text">I'm text that has a background image!</p>
+  <h2 class="card-title text-center">About</h2>
+    <p class="card-text text-center">I'm text that has a background image!</p>
   </div>
 </div>
 </body>
