--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -19,11 +19,9 @@
 </ul>
 </header>
 
-<div class="card">
+<div class="card text-center">
   <img class="card-img" src="/assets/resource/default.jpg" alt="Card image">
   <div class="card-img-overlay">
-  <hr>
-  <hr>
   <h2 class="card-title text-center">About</h2>
     <p class="card-text text-center">I'm text that has a background image!</p>
   </div>
