--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -23,7 +23,7 @@
   <img class="card-img" src="/assets/resource/default.jpg" alt="Card image">
   <div class="card-img-overlay">
   <h2 class="card-title text-center">About</h2>
-    <p class="card-text text-center">JSTM Technologies JSTM Technologies JSTM Technologies JSTM Technologies JSTM Technologies JSTM Technologies</p>
+    <p class="card-text text-center">JSTM Technologies JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies </p>
   </div>
 </div>
 </body>
