--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -20,10 +20,10 @@
 </header>
 
 <div class="card text-center">
-  <img class="card-img" src="/assets/resource/default.jpg" alt="Card image">
+  <img class="card-img" src="https://i.ytimg.com/vi/x_2BeJFJQvA/maxresdefault.jpg" alt="Card image">
   <div class="card-img-overlay">
   <h2 class="card-title text-center">About</h2>
-    <p class="card-text text-center">JSTM Technologies JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies </p>
+    <p class="card-text text-center">JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies </p>
   </div>
 </div>
 </body>
