--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -20,7 +20,7 @@
 </header>
 
 <div class="card text-center">
-  <img class="card-img" src="https://i.ytimg.com/vi/x_2BeJFJQvA/maxresdefault.jpg" alt="Card image" height="100%">
+  <img class="card-img" src="https://i.ytimg.com/vi/x_2BeJFJQvA/maxresdefault.jpg" alt="Card image" max-height="100%">
   <div class="card-img-overlay">
   <h2 class="card-title text-center">About</h2>
     <p class="card-text text-center">JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies <br> JSTM Technologies JSTM Technologies JSTM Technologies </p>
