--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang='se'>
-<head>
-<title>JSTM Technologies</title>
-<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
-</head>
+	<head>
+		<title>J|S|T|M Technologies</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<link href='assets/style/style.css' rel='stylesheet'  type='text/css'>
+	</head>
+	<body><div class="container col-12 col-md-12" style="border-radius: 0px;">
+		<header>
+			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			<a class="navbar-brand logo text__green" href="index.html">J|S|T|M</a>
 
-<body>
-
-<header>
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="index.html">Home</a>
-  </li>
-  <li id="item">
-  <p>|</p>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="assets/pages/products.html">Products</a>
-  </li>
-  <li id="item"> 
-  <span class="align-text-bottom">|</span>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="assets/pages/about.html">About</a>
-  </li>
-  <li id="item">
-  <p>|</p>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="assets/pages/contact.html">Contact</a>
-  </li>
-</ul>
-</header>
-<!--<img src="assets/resource/monkey.JPG" class="img-fluid" alt="Responsive image">-->
-<img src="assets/resource/default.jpg" class="img-fluid" alt="Responsive image">
-<p class="text-center">Center aligned text on all viewport sizes.</p>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="assets/pages/products.html">Products<span class="sr-only">(current)</span></a>
+					</li>
+				    <li class="nav-item active">
+						<a class="nav-link" href="assets/pages/about.html">About<span class="sr-only">(current)</span></a>
+					</li>
+				    <li class="nav-item active">
+						<a class="nav-link" href="assets/pages/contact.html">Contact us<span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+			  </div>
+			</nav>
+		
+			
+					<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('assets/resource/default.jpg'); 
+						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
+						-o-background-size: cover; background-size: cover; min-height: 600px;">
+						<h1 class="text__white bold">We creates digital solutions to 
+						future-proof your business</h1>
+					
+					</div>
+			</div>
+			
+	</header>
+			<!--<img class="jumbotron-img img-fluid" src="assets/resource/default.jpg" alt="img not found">-->
+	<!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 
 </html>
