--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -1,24 +1,88 @@
 <!DOCTYPE html>
 <html lang='se'>
-<head>
-<title>Products</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<link href='/assets/style/style.css' rel='stylesheet'  type='text/css'>
-</head>
+	<head>
+		<title>Products</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
+	</head>
+	<body>
+		<header>
+		<div class="container col-12 col-md-12" style="border-radius: 0px;">
+			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <a class="navbar-brand logo" href="../../index.html">J|S|T|M</a>
 
-<body>
-
-<header>
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="https://jstmsolution.github.io/index.html">Home</a>
-  </li>
-</ul>
-</header>
-
-<p> Products </p>
+			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="../../index.html">Home<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
+					</li>
+				    <li class="nav-item active">
+						<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+					</li>
+				    <li class="nav-item active">
+						<a class="nav-link" href="contact.html">Contact us<span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+			  </div>
+			</nav>
+		
+		<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
+		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
+		-o-background-size: cover; background-size: cover; min-height: 600px;">
+			<h1 class="text__white bold">Digitalize your business models and 
+			streamline your processes</h1>
+				<div class="container">
+					<div class="row row-offcanvas row-offcanvas-right">
+					<div class="col-12 col-md-12">
+						<p class="float-right hidden-md-up">
+						</p>
+						<div class="row">
+							<div class="col-12 col-lg-6">
+								<h2>Heading</h2>
+								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+							</div><!--/span-->
+							<div class="col-12 col-lg-6">
+								<h2>Heading</h2>
+								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+							</div><!--/span-->
+							<div class="col-12 col-lg-6">
+								<h2>Heading</h2>
+								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+							</div><!--/span-->
+							<div class="col-12 col-lg-6">
+								<h2>Heading</h2>
+								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+							</div><!--/span-->
+						  </div><!--/row-->
+						</div><!--/span-->
+			
+		</div>
+	</div>
+	
+			
+		</header>
+		
+		
+				
+			
+			
+		
+	<!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
+
 </html>
