No more Home and more content

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -18,17 +18,15 @@
 
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+				
 					<li class="nav-item active">
-						<a class="nav-link" href="../../index.html">Home<span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="about.html">Om oss<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact us<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			  </div>
@@ -36,7 +34,7 @@
 			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/default.jpg'); 
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
-						<h1 class="text__white bold">Guiding manufacturing companies in digital transformation</h1>
+						<h1 class="text__white bold">Vägleder tillverkar företag i den digital omvandling</h1>
 					
 					</div>
 			</div>
