--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -18,17 +18,15 @@
 
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+				
 					<li class="nav-item active">
-						<a class="nav-link" href="../../index.html">Home<span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="about.html">Om oss<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact us<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			  </div>
@@ -36,12 +34,53 @@
 			<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/cont.jpg'); 
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
-						<h1 class="bold">Hello!</h1>
-						<h1 class="bold">We are here to help you</h1>
+						<h1 class="bold">Hej!</h1>
+						<h1 class="bold">Vi är här för att hjälpa dig</h1>
 					
+					<div class="container">
+					<div class="row row-offcanvas row-offcanvas-right">
+					<div class="col-12 col-md-12">
+						<p class="float-right hidden-md-up">
+						</p>
+						<div class="row">
+							<div class="col-12 col-lg-6 bg__color">
+								<img class="img-thumbnail img-responsive" src="../resource/dveb.jpg" style="">
+								<ul>
+									<li>Fredrik Bengtsson, VD</li>
+									<li>Tel. 070 - 123 45 67</li>
+									<li>E-post: fredrik.bengtsson@jstm.se</li>
+								</ul>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<img class="img-thumbnail img-responsive" src="../resource/dveb2.jpg">
+								<ul>
+									<li>Mikael Lindgren, Konsult</li>
+									<li>Tel. 070 - 123 45 67</li>
+									<li>E-post: mikael.lindgren@jstm.se</li>
+								</ul>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<img class="img-thumbnail img-responsive" src="../resource/dveb3.jpg">
+								<ul>
+									<li>Anna Nilsson, Rekryterare</li>
+									<li>Tel. 070 - 123 45 67</li>
+									<li>E-post: anna.nilsson@jstm.se</li>
+								</ul>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<img class="img-thumbnail img-responsive" src="../resource/dveb4.jpg">
+								<ul>
+									<li>Helena Söderström, Chef</li>
+									<li>Tel. 070 - 123 45 67</li>
+									<li>E-post: helena.söderström@jstm.se</li>
+								</ul>
+							</div>
+						  </div>
+						</div>
 					</div>
 			</div>
 		</header>
+		
 	
 	
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
