--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -18,17 +18,15 @@
 
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+					
 					<li class="nav-item active">
-						<a class="nav-link" href="../../index.html">Home<span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="about.html">Om oss<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact us<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			  </div>
@@ -37,36 +35,49 @@
 		<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
 		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 		-o-background-size: cover; background-size: cover; min-height: 600px;">
-			<h1 class="text__white bold">Digitalize your business models and 
-			streamline your processes</h1>
+			<h1 class="text__white bold">Digitalisera dina affärsmodeller och
+			effektivisera processer</h1>
 				<div class="container">
 					<div class="row row-offcanvas row-offcanvas-right">
 					<div class="col-12 col-md-12">
 						<p class="float-right hidden-md-up">
 						</p>
 						<div class="row">
-							<div class="col-12 col-lg-6">
-								<h2>Heading</h2>
-								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-							</div><!--/span-->
-							<div class="col-12 col-lg-6">
-								<h2>Heading</h2>
-								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-							</div><!--/span-->
-							<div class="col-12 col-lg-6">
-								<h2>Heading</h2>
-								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-							</div><!--/span-->
-							<div class="col-12 col-lg-6">
-								<h2>Heading</h2>
-								<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-								<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-							</div><!--/span-->
-						  </div><!--/row-->
-						</div><!--/span-->
+							<div class="col-12 col-lg-6 bg__color">
+								<h2>Affärssystem</h2>
+								<p>Vi utgår från de tre ledande affärssystemen SAP, 
+								Microsoft Dynamics 365 och Infor M3 och anpassar 
+								dem efter bransch, behov och affärsmål.</p>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<h2>Beslutsstödsystem</h2>
+								<p>Vi är experter på affärsystem och vet vi var vi kan
+								hämta rätt data. Vi har dessutom lång erfarenhet 
+								av e-handel och har tagit fram egna BI-lösningar för 
+								att mäta omnikanalförsäljning.</p>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<h2>E-Handel</h2>
+								<p>Vår kompetens är idag mycket bred och sträcker sig
+								från strategisk design och UX till lojalitetsprogram, 
+								PIM och implementation av marknadens ledande 
+								e-handelsplattformar och ERP-system. Med våra specialisters
+								samlade kompetenser kan vi verkligen ta ett helhetsgrepp 
+								runt er digitala affär och vara en sparringpartner runt de 
+								flesta problemställningar ni kommer möta under resans gång.
+								</p>
+							</div>
+							<div class="col-12 col-lg-6 bg__color">
+								<h2>Förvaltning och Support</h2>
+								<p>Vi har en väl utvecklad infrastruktur och inarbetade processer
+								för att hantera alla typer av incidenter, fel och problem 
+								24 timmar om dygnet. Med djup system- och branschkunskap,
+								egen certifiering av våra konsulter och en lösningsinriktad 
+								företagskultur, är vi redo att ta ett långsiktigt helhetsansvar 
+								över dina affärskritiska system.</p>
+							</div>
+						  </div>
+						</div>
 			
 		</div>
 	</div>
