--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
 
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav mr-auto mt-2 mt-md-0">
+					
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="assets/pages/products.html">Products<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="assets/pages/products.html">Våra Produkter<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="assets/pages/about.html">About<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="assets/pages/about.html">Om oss<span class="sr-only">(current)</span></a>
 					</li>
 				    <li class="nav-item active">
-						<a class="nav-link" href="assets/pages/contact.html">Contact us<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="assets/pages/contact.html">Kontakt<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			  </div>
@@ -37,8 +35,8 @@
 					<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('assets/resource/default.jpg'); 
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
-						<h1 class="text__white bold">We creates digital solutions to 
-						future-proof your business</h1>
+						<h1 class="text__white bold">Vi skapar digitala lösningar som
+						framtidssäkrar ditt företag</h1>
 					
 					</div>
 			</div>
