--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -37,14 +37,14 @@
 						<h1 class="bold">Hej!</h1>
 						<h1 class="bold">Vi är här för att hjälpa dig</h1>
 					
-					<div class="container">
+					<div class="container trans">
 					<div class="row row-offcanvas row-offcanvas-right">
 					<div class="col-12 col-md-12">
 						<p class="float-right hidden-md-up">
 						</p>
 						<div class="row">
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive" src="../resource/dveb.jpg" style="">
+								<img class="img-thumbnail img-responsive con_img_size" src="../resource/dveb.jpg">
 								<ul>
 									<li>Fredrik Bengtsson, VD</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -52,7 +52,7 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive" src="../resource/dveb2.jpg">
+								<img class="img-thumbnail img-responsive con_img_size" src="../resource/dveb2.jpg">
 								<ul>
 									<li>Mikael Lindgren, Konsult</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -60,7 +60,7 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive" src="../resource/dveb3.jpg">
+								<img class="img-thumbnail img-responsive con_img_size" src="../resource/dveb3.jpg">
 								<ul>
 									<li>Anna Nilsson, Rekryterare</li>
 									<li>Tel. 070 - 123 45 67</li>
@@ -68,7 +68,7 @@
 								</ul>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<img class="img-thumbnail img-responsive" src="../resource/dveb4.jpg">
+								<img class="img-thumbnail img-responsive con_img_size" src="../resource/dveb4.jpg">
 								<ul>
 									<li>Helena Söderström, Chef</li>
 									<li>Tel. 070 - 123 45 67</li>
