--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -35,17 +35,25 @@
 						no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 						-o-background-size: cover; background-size: cover; min-height: 600px;">
 						<h1 class="text__white bold">Vägleder tillverkar företag i den digital omvandling</h1>
-						<p class="text__white bold">Vi sköter implementering, underhåll och utveckling av verksamhets- och IT-lösningar 
-						som syftar till att effektivisera och accelerera din verksamhet.Vi arbetar inom Data & 
-						Analys, E-handel & BI, Förvaltning & Support och Affärssystem.
-						Vi har ett heltäckande erbjudande i kombination med bred och djup kompetens,
-						både vad gäller teknisk expertis, branschkunskap och kundinsikt. Vi arbetar med de bästa 
-						leverantörerna inom varje segment, men det unika med oss är framför allt att kunna 
-						kombinera kompetenserna och systemen, anpassat efter behoven hos varje enskild kund.
-						</p>
-						<p class="text__white bold">Företaget grundades 2012 och ägs av fyra delägare som från uppstarten av byrån var fyra nyexaminerade '
-						studenter inom IT-området. Varav kommer företagets namn av de fyra delägarnas initial bokstav av varje förnamn.</p>
+					<div class="container">
+						<div class="row">
+							<div class="col-12 col-lg-6 col-centered bg__color text-center">
+															
+									<p class="bold">Vi sköter implementering, underhåll och utveckling av verksamhets- och IT-lösningar 
+									som syftar till att effektivisera och accelerera din verksamhet.Vi arbetar inom Data & 
+									Analys, E-handel & BI, Förvaltning & Support och Affärssystem.
+									Vi har ett heltäckande erbjudande i kombination med bred och djup kompetens,
+									både vad gäller teknisk expertis, branschkunskap och kundinsikt. Vi arbetar med de bästa 
+									leverantörerna inom varje segment, men det unika med oss är framför allt att kunna 
+									kombinera kompetenserna och systemen, anpassat efter behoven hos varje enskild kund.
+									</p>
+									<p class="bold">Företaget grundades 2012 och ägs av fyra delägare som från uppstarten av byrån var fyra nyexaminerade '
+									studenter inom IT-området. Varav kommer företagets namn av de fyra delägarnas initial bokstav av varje förnamn.</p>
+								
+							</div>
+						</div>
 					</div>
+				</div>
 			</div>
 		</header>
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
