--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -38,25 +38,25 @@
 			<h1 class="text__white bold">Digitalisera dina affärsmodeller och
 			effektivisera processer</h1>
 				<div class="container">
-					<div class="row row-offcanvas row-offcanvas-right">
+					<div class="row">
 					<div class="col-12 col-md-12">
 						<p class="float-right hidden-md-up">
 						</p>
 						<div class="row">
-							<div class="col-12 col-lg-6 bg__color trans">
+							<div class="col-12 col-lg-6 bg__color">
 								<h2>Affärssystem</h2>
 								<p>Vi utgår från de tre ledande affärssystemen SAP, 
 								Microsoft Dynamics 365 och Infor M3 och anpassar 
 								dem efter bransch, behov och affärsmål.</p>
 							</div>
-							<div class="col-12 col-lg-6 bg__color trans">
+							<div class="col-12 col-lg-6 bg__color">
 								<h2>Beslutsstödsystem</h2>
 								<p>Vi är experter på affärsystem och vet vi var vi kan
 								hämta rätt data. Vi har dessutom lång erfarenhet 
 								av e-handel och har tagit fram egna BI-lösningar för 
 								att mäta omnikanalförsäljning.</p>
 							</div>
-							<div class="col-12 col-lg-6 bg__color trans">
+							<div class="col-12 col-lg-6 bg__color">
 								<h2>E-Handel</h2>
 								<p>Vår kompetens är idag mycket bred och sträcker sig
 								från strategisk design och UX till lojalitetsprogram, 
@@ -67,7 +67,7 @@
 								flesta problemställningar ni kommer möta under resans gång.
 								</p>
 							</div>
-							<div class="col-12 col-lg-6 bg__color trans">
+							<div class="col-12 col-lg-6 bg__color">
 								<h2>Förvaltning och Support</h2>
 								<p>Vi har en väl utvecklad infrastruktur och inarbetade processer
 								för att hantera alla typer av incidenter, fel och problem 
