--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -80,7 +80,20 @@
 					</div>
 			</div>
 		</header>
-		
+			<footer>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="col-12 text-center col-centered">
+					<img class="foot__img" src="../resource/sap.png">
+					<img class="foot__img" src="../resource/microsoft.png">
+					<img class="foot__img" src="../resource/ibm.png">
+					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
+					<p></p>
+					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
+				</div>
+			</div>
+		</div>
+		</footer>
 	
 	
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
