--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -8,7 +8,7 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-		<header>
+		
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
 			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
@@ -32,6 +32,7 @@
 			  </div>
 			</nav>
 		
+		<main>
 		<div class="jumbotron container-fluid" style=" border-radius: 0px; background-image: url('../resource/IT-Services.jpg'); 
 		no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover;
 		-o-background-size: cover; background-size: cover; min-height: 600px;">
@@ -50,7 +51,7 @@
 								dem efter bransch, behov och affärsmål.</p>
 							</div>
 							<div class="col-12 col-lg-6 bg__color">
-								<h2>Beslutsstödsystem</h2>
+								<h2>Besluts stödsystem</h2>
 								<p>Vi är experter på affärsystem och vet vi var vi kan
 								hämta rätt data. Vi har dessutom lång erfarenhet 
 								av e-handel och har tagit fram egna BI-lösningar för 
@@ -79,14 +80,23 @@
 						  </div>
 						</div>
 			
+				</div>
+			</div>
+		</main>
+	<footer>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="col-12 text-center col-centered">
+					<img class="foot__img" src="../resource/sap.png">
+					<img class="foot__img" src="../resource/microsoft.png">
+					<img class="foot__img" src="../resource/ibm.png">
+					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
+					<p></p>
+					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
+				</div>
+			</div>
 		</div>
-	</div>
-	
-			
-		</header>
-		
-		
-				
+		</footer>
 			
 			
 		
