--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
 			</div>
 			
 	</header>
+		<footer>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="col-12 text-center col-centered">
+					<img class="foot__img" src="assets/resource/sap.png">
+					<img class="foot__img" src="assets/resource/microsoft.png">
+					<img class="foot__img" src="assets/resource/ibm.png">
+					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
+					<p></p>
+					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
+				</div>
+			</div>
+		</div>
+		</footer>
+		
+				
 			<!--<img class="jumbotron-img img-fluid" src="assets/resource/default.jpg" alt="img not found">-->
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
