--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -8,7 +8,7 @@
 		<link href='../style/style.css' rel='stylesheet'  type='text/css'>
 	</head>
 	<body>
-		<header>
+		
 		<div class="container col-12 col-md-12" style="border-radius: 0px;">
 			<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
 			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
@@ -55,7 +55,21 @@
 					</div>
 				</div>
 			</div>
-		</header>
+		
+	<footer>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="col-12 text-center col-centered">
+					<img class="foot__img" src="../resource/sap.png">
+					<img class="foot__img" src="../resource/microsoft.png">
+					<img class="foot__img" src="../resource/ibm.png">
+					<p class="foot__text">Tel: 018-66 67 12 - E-post: info@jstm.se - Besöksadress: Tulegatan 44, 11 353 Stockholm - Postadress / Fakturaadress</p>
+					<p></p>
+					<p class="foot__text">© Copyright 2017 - JSTM Solutions</p>
+				</div>
+			</div>
+		</div>
+		</footer>
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
